--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "minimist": "^1.2.5",
     "mongoose": "^5.9.5",
     "morgan": "^1.10.0",
     "ngx-cookie-service": "^2.4.0",
@@ -52,9 +53,13 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.2",
     "nodemon": "^1.19.4",
+    "npm-force-resolutions": "0.0.3",
     "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
+  },
+  "resolutions": {
+    "@babel/preset-env": "^7.8.7"
   }
 }
