--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
   },
   "resolutions": {
     "@babel/preset-env": "^7.8.7"
+  },"engines": {
+    "npm": "6.14.x",
+    "node": "10.16.x"
   }
 }
