--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^5.9.5",
     "morgan": "^1.10.0",
     "ngx-cookie-service": "^2.4.0",
+    "optimist": "^0.6.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.11.1",
     "zone.js": "~0.9.1"
@@ -41,6 +42,7 @@
     "@angular/cli": "~8.1.1",
     "@angular/compiler-cli": "~8.1.1",
     "@angular/language-service": "~8.1.1",
+    "@babel/compat-data": "~7.8.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -58,9 +60,6 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
-  },
-  "resolutions": {
-    "@babel/preset-env": "^7.8.7"
   },
   "engines": {
     "npm": "6.14.x",
