--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "optimist": "^0.6.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.11.1",
-    "zone.js": "~0.9.1",
-    "heroku-postbuild": "ng build --prod"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.25",
